# genesis

./: CMakeLists.txt  README.md
src/: main.c
